--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,17 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Urbanist:wght@400;700&display=swap" rel="stylesheet">
+    <style>
+      @font-face {
+        font-family: 'Coolvetica';
+        src: url('%PUBLIC_URL%/fonts/Coolvetica.otf') format('truetype');
+        font-weight: normal;
+        font-style: normal;
+      }
+    </style>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
